{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 21,
  "lineage": "18e0043f-aec5-7d67-8b6a-14f3e937b0e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gourmeal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:internet-gateway/igw-0ef93be067e1736e8",
            "id": "igw-0ef93be067e1736e8",
            "owner_id": "737078406263",
            "tags": {
              "Name": "gourmeal"
            },
            "tags_all": {
              "Name": "gourmeal"
            },
            "vpc_id": "vpc-00ff92b7e73471ee1"
          },
          "dependencies": [
            "aws_vpc.gourmeal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gourmeal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:route-table/rtb-0eb5f5883b0ecf859",
            "id": "rtb-0eb5f5883b0ecf859",
            "owner_id": "737078406263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef93be067e1736e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ff92b7e73471ee1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gourmeal",
            "aws_vpc.gourmeal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gourmeal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9dbb4cd1fcec460",
            "route_table_id": "rtb-0eb5f5883b0ecf859",
            "subnet_id": "subnet-06185af7131d93e84"
          },
          "dependencies": [
            "aws_internet_gateway.gourmeal",
            "aws_route_table.gourmeal",
            "aws_subnet.gourmeal",
            "aws_vpc.gourmeal",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd14b4e29b014e74",
            "route_table_id": "rtb-0eb5f5883b0ecf859",
            "subnet_id": "subnet-0961898c3509284c2"
          },
          "dependencies": [
            "aws_internet_gateway.gourmeal",
            "aws_route_table.gourmeal",
            "aws_subnet.gourmeal",
            "aws_vpc.gourmeal",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gourmeal_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:security-group/sg-04fba81f117bf1b46",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fba81f117bf1b46",
            "ingress": [],
            "name": "gourmeal-cluster",
            "name_prefix": "",
            "owner_id": "737078406263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gourmeal-eks"
            },
            "tags_all": {
              "Name": "gourmeal-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ff92b7e73471ee1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gourmeal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gourmeal_cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "66.69.157.117/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3252653242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fba81f117bf1b46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gourmeal_cluster",
            "aws_vpc.gourmeal",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gourmeal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:subnet/subnet-06185af7131d93e84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06185af7131d93e84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737078406263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            },
            "tags_all": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            },
            "vpc_id": "vpc-00ff92b7e73471ee1"
          },
          "dependencies": [
            "aws_vpc.gourmeal",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:subnet/subnet-0961898c3509284c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0961898c3509284c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737078406263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            },
            "tags_all": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            },
            "vpc_id": "vpc-00ff92b7e73471ee1"
          },
          "dependencies": [
            "aws_vpc.gourmeal",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gourmeal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737078406263:vpc/vpc-00ff92b7e73471ee1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfd4cc260574c00e",
            "default_route_table_id": "rtb-060f57c65c63adcea",
            "default_security_group_id": "sg-0f3b04766bad57405",
            "dhcp_options_id": "dopt-0848c129e911f4c46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ff92b7e73471ee1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060f57c65c63adcea",
            "owner_id": "737078406263",
            "tags": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            },
            "tags_all": {
              "Name": "gourmeal-node",
              "kubernetes.io/cluster/gourmeal-node": "shared"
            }
          }
        }
      ]
    }
  ]
}